--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,33 @@ html {
 
 @layer base {
   :root {
+    --background: 30 10% 10%;
+    --foreground: 60 50% 90%;
+    --card: 30 10% 12%;
+    --card-foreground: 60 50% 90%;
+    --popover: 30 10% 10%;
+    --popover-foreground: 60 50% 90%;
+    --primary: 28 90% 65%;
+    --primary-foreground: 20 5% 5%;
+    --secondary: 30 10% 20%;
+    --secondary-foreground: 60 50% 90%;
+    --muted: 30 10% 20%;
+    --muted-foreground: 60 30% 70%;
+    --accent: 30 80% 75%;
+    --accent-foreground: 20 5% 5%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 30 10% 25%;
+    --input: 30 10% 25%;
+    --ring: 28 90% 65%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+    --radius: 0.5rem;
+  }
+  .light {
     --background: 60 56% 91%;
     --foreground: 30 10% 25%;
     --card: 60 56% 95%;
@@ -28,33 +55,6 @@ html {
     --border: 60 30% 85%;
     --input: 60 30% 88%;
     --ring: 28 90% 70%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
-  }
-  .dark {
-    --background: 30 10% 10%;
-    --foreground: 60 50% 90%;
-    --card: 30 10% 12%;
-    --card-foreground: 60 50% 90%;
-    --popover: 30 10% 10%;
-    --popover-foreground: 60 50% 90%;
-    --primary: 28 90% 65%;
-    --primary-foreground: 20 5% 5%;
-    --secondary: 30 80% 75%;
-    --secondary-foreground: 20 5% 5%;
-    --muted: 30 10% 20%;
-    --muted-foreground: 60 30% 70%;
-    --accent: 30 80% 75%;
-    --accent-foreground: 20 5% 5%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 30 10% 25%;
-    --input: 30 10% 25%;
-    --ring: 28 90% 65%;
   }
 }
 
